--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="title_purple">
         <item name="android:textSize">48sp</item>
-        <item name="android:textColor">@color/purple_500</item>
+        <item name="android:textColor">#00B8D4</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">true</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:layout_marginHorizontal" tools:targetApi="o">64dp</item>
+        <item name="android:layout_marginTop">36dp</item>
+    </style>
+
+    <style name="input_style">
+        <item name="android:layout_marginHorizontal" tools:targetApi="o">64dp</item>
+        <item name="android:layout_marginTop">36dp</item>
+        <item name="android:inputType">numberDecimal</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/holo_green_light</item>
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
