--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="holo_green_dark">#2E7D32</color>
+    <color name="holo_green_light">#D76EF40F</color>
+    <color name="holo_blue_dark">#0C1977</color>
+    <color name="holo_blue_light">#3149F8</color>
 </resources>
